--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -24,7 +24,7 @@
     -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <title>React App</title>
+    <title>Queue R</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
